<resources>
    <string name="app_name">Lucarne</string>
    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_open">Double tap to open</string>
    <string name="experimental_">(experimental)</string>
    <string name="admin_permission_message">Lucarne promises to use lock screen permission responsibly.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="follow">Follow</string>
    <string name="email">Email</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>
    <string name="long_press_for_settings">Long press anywhere for settings</string>
    <string name="swipe_up_for_apps">Swipe up for all apps</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="daily_wallpaper_update">Daily new wallpaper</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="app_drawer_tips">Tip: Swipe down to dismiss. Scroll to hide keyboard.</string>
    <string name="okay_got_it">Okay, got it</string>
    <string name="double_tap_lock_is_enabled_message">If double tap lock disables fingerprint or face unlock, open Lucarne settings, tap on \'experimental\' and follow the instructions. Thank you.</string>

    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Show status bar</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="widget">Add Widget</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="blossom">Blossom</string>
    <string name="double_tap_lock_uninstall_message">Double tap to lock enabled.
        \n\nNote: Turn this OFF first if you decide to delete Lucarne.</string>
    <string name="welcome_to_lucarne_settings">Our About page on the bottom has answers to all your questions. Don\'t forget. :)
        \n\nThank you.</string>
    <string name="rate_us_message">You won\'t see this message again.
        \n\nHi, if you find Lucarne useful, can you please rate us 5-stars? Thank you for choosing Lucarne.</string>
    <string name="share_message">Hi, do you think your friends and followers would like Lucarne?
        \n\nYou can always find the Share button at the bottom of this page. Thank you.</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock. Any data acquired by the service will not leave your device.</string>
    <string name="lock_layout_description">lock layout description to be used a unique id to lock screen</string>
    <string name="menu_insert_widget_label">Add Widget</string>
    <string name="group_search">Search</string>

    <string name="menu_remove_widget_label">Remove Widget</string>
    <string name="no_widgets_popup">Add widgets first</string>
    <string name="widget_removed_popup">The widget was removed!</string>
    <string name="app_help">Touch menu to add/remove widgets.</string>
</resources>