<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <!-- Placeholder layout for locking screen-->
    <FrameLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/lock_layout_description" />

    <!-- Clock and calendar-->
    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextClock
            android:id="@+id/clock"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrainsmedium"
            android:format12Hour="hh:mm"
            android:layout_marginTop="42dp"
            android:textSize="@dimen/time_size" />

        <TextClock
            android:id="@+id/date"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrainsmedium"
            android:format12Hour="EEEE, MMMM dd"
            android:format24Hour="EEEE, MMMM dd"
            android:letterSpacing="0.02"
            android:textSize="@dimen/date_size" />

        <!-- The name of the widget. -->
        <TextView
            android:id="@+id/widget_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"

            android:textColor="#FFFFFFFF"
            android:textSize="12sp"
            android:textAlignment="viewStart"
            android:fontFamily="sans-serif-condensed"
            android:shadowRadius="2.0"
            android:shadowColor="#B0000000" />

        <!-- The original dimensions of the widget (can't be the same text as above due to different
             style. -->
        <TextView
            android:id="@+id/widget_dims"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:gravity="start"

            android:textColor="#FFFFFFFF"
            android:textSize="12sp"
            android:fontFamily="sans-serif-condensed"
            android:shadowRadius="2.0"
            android:shadowColor="#B0000000" />
    </LinearLayout>


    <!-- Home apps-->
    <LinearLayout
        android:id="@+id/homeAppsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/homeApp1"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_1"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp2"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_2"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp3"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_3"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp4"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_4"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp5"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_5"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp6"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_6"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp7"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_7"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

        <TextView
            android:id="@+id/homeApp8"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/app"
            android:paddingVertical="@dimen/home_app_padding_vertical"
            android:tag="@string/_8"
            android:textAppearance="@style/TextLarge"
            android:visibility="gone" />

    </LinearLayout>

    <!-- First run tips -->
    <LinearLayout
        android:id="@+id/firstRunTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/swipe_up_for_apps" />

        <TextView
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_press_for_settings" />

    </LinearLayout>

    <!-- Set default launcher -->
    <TextView
        android:id="@+id/setDefaultLauncher"
        style="@style/TextSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="56dp"
        android:text="@string/set_as_default_launcher"
        android:visibility="gone" />
</FrameLayout>